--- a/all.css
+++ b/all.css
@@ -150,12 +150,17 @@ label{
     display: block;
     width: 65.4%;
     margin: 0 auto;
+    text-align: center;
     background-color: #AA0601;
     border: none;
     color: white;
     padding: 16px 0px;
     margin-bottom: 80px;
 }
+.contact-comfirm:hover{
+    background-color: #650300;
+}
+
 /* 聯絡我們END */
 
 /* footer */
@@ -177,6 +182,9 @@ label{
 }
 .social img{
     width: 48px;
+}
+.social a:hover{
+    filter:brightness(80%);
 }
 .copyright{
     display: flex;
