--- a/rwd.css
+++ b/rwd.css
@@ -24,18 +24,20 @@
     }
     .menu a{
         margin: 0 auto;
-        font-size: 16px;
+        font-size: 14px;
     }
 /* 導覽列END */
 
 /* banner */
-@media (max-width: 767px){
     .header{
         height: 400px;
         background-position: right;
         display: flex;
         justify-content: center;
         align-items: center;
+    }
+    .header-container{
+        width: 100%;
     }
     .slogan{
         justify-content: center;
@@ -44,17 +46,18 @@
         padding-top: 20px;
     }
     .slogan h3{
+        width: 100%;
         font-size: 24px;
     }
     .slogan h2{
-        font-size: 40px;
+        font-size: 36px;
     }
-}
 /* bannerEND */
 
 /* 品牌介紹 */
     .intro-title{
-        font-size: 40px;
+        font-size: 36px;
+        margin-bottom: 20px;
     }
     .intro{
         flex-wrap: wrap;
@@ -68,7 +71,8 @@
 
 /* 經典系列 */
     .classical-title{
-        font-size: 40px;
+        font-size: 36px;
+        margin-bottom: 20px;
     }
     .classicalSeries{
         flex-wrap: wrap; 
@@ -94,7 +98,8 @@
         width: 90%;
     }
     .co-brand-title{
-        font-size: 40px;
+        font-size: 36px;
+        margin-bottom: 20px;
     }
     .co-brand{
         flex-wrap: wrap;
@@ -102,26 +107,27 @@
     .co-brand-item{
         margin-bottom: 24px;
     }
-    .co-brand li{
-    }
     .co-brand a p{
         font-size: 32px;
     }
 /* 聯名設計END */
 
 /* 顧客推薦 */
+    .recommend-container{
+        width: 100%;
+    }
     .recommend-title{
-        font-size: 40px;
+        font-size: 36px;
+        margin-bottom: 20px;
     }
     .recommend{
         flex-wrap: wrap;
         margin-bottom: 64px;
+        width: 100%;
     }
     .recommend-item{
         width: 100%;
-        margin-bottom: 24px;
-    }
-    .recommend-item li{
+        margin: 0 0 24px 0;
     }
 /* 顧客推薦END */
 /* 聯絡我們 */
@@ -129,7 +135,8 @@
         width: 75%;
     }
     .contact-tilte{
-        font-size: 40px;
+        font-size: 36px;
+        margin-bottom: 20px;
     }  
 
     .contact-comfirm{
