--- a/all.css
+++ b/all.css
@@ -9,7 +9,7 @@
     background-color: #AA0601;
     padding: 16px 0;
 }
-.nav_container{
+.nav-container{
     width: 67.5%;
     margin: 0 auto;
     display: flex;
