--- a/rwd.css
+++ b/rwd.css
@@ -13,7 +13,7 @@
         background-color: #AA0601;
         padding: 0;
     }
-    .nav_container{
+    .nav-container{
         width: 100%;
         flex-wrap: wrap;
         text-align: center;
