--- a/sunglasses_page_1.css
+++ b/sunglasses_page_1.css
@@ -1,4 +1,9 @@
 /* 導覽列 */
+.hamberger{
+    display: none;
+}
+/* 導覽列END */
+/* 商品分類 */
 .category{
     display: flex;
     justify-content: center;
@@ -13,7 +18,7 @@
 .category-item-focus{
     border-bottom: 8px solid #AA0601;
 }
-/* 導覽列END */
+/* 商品分類END */
 
 /* 太陽眼鏡BN */
 .sunglasses-banner{
@@ -32,6 +37,7 @@
     background-size: cover;
     background-position: center;
 }
+
 /* 太陽眼鏡BN END*/
 
 /* 商品目錄 */
@@ -67,7 +73,6 @@
     height: 24px;
     background-color: #B75929;
     border-radius: 4px;
-
 }
 /* 商品目錄END */
 
@@ -96,6 +101,16 @@
 .pageDirect-focus{
     background-color: #000;
     color: #fff;
+}
+
+@media (max-width: 992px){
+    
+
+
+    
+
+    
+    
 }
 
 /* 頁籤END */
